# Quantitative-Risk-Platform

./: .gitignore  CODE_FORMATTING.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.streamlit  GITHUB_READY.md  LICENSE  README.md  README_HF.md  RENDER_CHECKLIST.md  RENDER_DEPLOYMENT.md  STAGING_DEPLOYMENT.md  WORKFLOW.md  build.sh  deploy-staging.sh  docker-compose.prod.yml  docker-compose.yml  fly.toml  format-code.sh  hf_readme.md  mypy.ini  pyproject.toml  railway.json  render-docker.yaml  render-fullstack.yaml  render-python312.yaml  render-python313.yaml  render-rust.yaml  render-stable.yaml  render.yaml  requirements-dev.txt  requirements-minimal-safe.txt  requirements-py313.txt  requirements-python313.txt  requirements-render.txt  requirements-ultra-minimal.txt  requirements.txt  requirements_hf.txt  simple_main.py  (+8 more)
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  release.yml  staging.yml
.streamlit/: config.toml
backend/: __init__.py
backend/api/routes/: market_data.py  monte_carlo_api.py  portfolio.py  risk_analysis.py
backend/api/schemas/: __init__.py  portfolio.py  risk_metrics.py
backend/app/: main.py
backend/data_processing/: data_processor.py
backend/risk_engines/: __init__.py  monte_carlo.py
config/: .env.example  .env.staging.example  README.md
configs/: pyproject.toml  render-embedded.yaml  render-fullstack.yaml  render-simple.yaml  render-stable.yaml  render.yaml
deployment/: README.md  STAGING_DEPLOYMENT.md  deploy-staging.sh  deploy.sh  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  trigger-staging.sh
docs/: API.md  API_DOCUMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_QUALITY_GUIDE.md  COMMIT_MESSAGE_STANDARDS.md  COMMIT_MESSAGE_TEMPLATES.md  GITHUB_READY.md  GIT_ALIASES.md  USER_GUIDE.md
docs/deployment/: DEPLOYMENT_GUIDE.md  ENVIRONMENT_VARIABLES.md
frontend/: app.py  app_standalone.py
requirements/: README.md  base.txt  development.txt  production.txt  requirements-dev.txt  requirements-minimal.txt  requirements-render.txt
sample_data/: historical_returns.csv  portfolio_weights.csv
scripts/: git-commit.sh  health_check.py  setup.py  simple_main.py
tests/: __init__.py  test_api.py  test_integration.py
tests/integration/: __init__.py  test_integration.py
